# kis-autotrader

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  ecosystem.config.js  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: strategy.yaml  user_overrides.yaml
deploy/: README.md  kis-kr.service  kis-kr.timer  kis-us.service  kis-us.timer  run_session.sh  setup.sh
docs/: 00_setup.md  01_kis_api_basics.md  02_strategy_design.md  03_cron_job_org_setup.md  RELIABILITY_PLAN.md  rapid_decline_trigger.md
notebooks/: 01_first_quote.ipynb
scripts/: __init__.py  analyze_daily_range.py  check_auth.py  check_balance.py  check_today_orders.py  debug_balance_audit.py  debug_executions.py  debug_flow_predict.py  debug_investor_flow.py  debug_market_now.py  debug_minute_bars.py  debug_period_profit.py  debug_psamount.py  debug_psbl.py  debug_pykrx_flow.py  debug_regime_validate.py  debug_us_cash.py  debug_us_daily.py  debug_us_prices.py  dry_run_report.py  manual_long.py  manual_sell.py  market_snapshot.py  oci-setup.sh  preflight.py  reconcile_state.py  reposition_inverse.py  run_bot.bat  screen_daytrade.py  test_all_features.py
src/: __init__.py  adaptive_learning.py  config.py  config_overrides.py  daily_report.py  experience.py  journal.py  journal_quick.py  kis_auth.py  kis_client.py  learning_diary.py  market_learner.py  market_regime.py  merge_trades.py  optimizer.py  pre_briefing.py  risk_manager.py  tracker.py
tests/: test_config_overrides.py  test_conviction_cap.py  test_cost_gate.py  test_daily_profit_target.py  (+23 more)
(+68 files in other folders)
