[project]
name = "kis-autotrader"
version = "0.1.0"
description = "Korean Investment Securities (KIS) Open API based automated stock trading system"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BudongJW" }]
license = { text = "Proprietary" }

dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "ta>=0.11.0",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0.0", "ipykernel>=6.29.0", "matplotlib>=3.8.0", "plotly>=5.20.0"]
backtest = ["backtrader>=1.9.78"]
notify = ["discord-webhook>=1.3.0", "python-telegram-bot>=21.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[project.scripts]
kis-auth-check = "scripts.check_auth:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
